--- a/.gitignore
+++ b/.gitignore
@@ -106,4 +106,11 @@ venv.bak/
 *training_state_epoch_*
 *model_state_epoch*
 *metrics_epoch*
+*metrics.json
+*vocabulary/
+*log/
+
+# MISC
+*.DS_Store
+*.idea
 
